--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Cherry+Cream+Soda&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Georama:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
 
 *{
     margin: 0%;
@@ -30,7 +31,24 @@ p{
     font-weight: bold;
 }
 
-
+.down{
+    padding: 3%;
+    text-align: center;
+    background-color: rgba(1, 82, 148, 0.534);
+    color: #000;
+    border: 3px solid #000;
+}
+.down:hover{
+    color:rgb(23, 38, 87);
+    box-shadow: 10px 10px 5px #333;
+}
+a{
+    font-family: 'Georama', sans-serif;
+}
+.sec-down{
+    text-align: center;
+    margin-left: 3%;    
+}
 .container-img{
     text-align: center;
 }
@@ -42,13 +60,28 @@ p{
 .letras{
     background-color: #CF3;
 }
-
+.italic{
+    font-style: italic;
+    font-family: 'Georama', sans-serif;
+}
 table{
     border-collapse: collapse;
 }
 table, tr, td{
     border: 3px solid; 
     padding: 1%;
+}
+#table2{
+    width: 100%;
+}
+.n1{
+    text-align: center;
+    font-family: 'Roboto Mono', monospace;
+    font-weight: bold;
+    background-color: rgba(131, 131, 131, 0.658);
+}
+.n2{
+    text-align: left;;
 }
 .und{
     text-decoration: underline;
@@ -57,6 +90,17 @@ table, tr, td{
     float: right;
     width: 15%;
     padding: 3%;
+}
+summary{
+    margin-left: 2%;
+    font-family: 'Georama', sans-serif;
+    font-weight: bold;
+}
+.ul-versões{
+    margin-left: 3%;
+}
+.new-rep{
+    margin-left: 2%;
 }
 .dile{
     float:left;
@@ -70,6 +114,7 @@ body{
 
 .dest{
     background-color: #6dff33;
+    font-family: 'Georama', sans-serif; 
 }
 
 h1{
@@ -79,4 +124,8 @@ h1{
 h2{
     padding-left: 2%;
     font-family: 'Righteous', cursive;
+}
+
+h3{
+    padding-left: 4%;
 }
